k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    main: docker-kubernetes-project
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
spec:
  rules:
    - host: dark-side.com
      http:
        paths:
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 80
          - path: /movies/(.*)
            pathType: Prefix
            backend:
              service:
                name: movie-service
                port:
                  number: 80
          - path: /actors/(.*)
            pathType: Prefix
            backend:
              service:
                name: actor-service
                port:
                  number: 80
          - path: /directors/(.*)
            pathType: Prefix
            backend:
              service:
                name: director-service
                port:
                  number: 80
